--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -4475,6 +4475,11 @@ button.close {
 .bg-primary {
   background-color: #7571f9 !important; }
 
+/* ! manual add */
+.bg-ayam {
+  background-image: url("/assets/images/Ayam-broiler.jpg");
+  background-size: contain;
+}
 a.bg-primary:hover, a.bg-primary:focus,
 button.bg-primary:hover,
 button.bg-primary:focus {
